# python_wrap

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md
boost_wrap/: boost_python.cpp
cppyy_wrap/: CMakeLists.txt  test_cppyy.py
cython_wrap/: CMakeLists.txt  Rectangle.pxd  setup.py  shapes_cython.pyx
pybind11_wrap/: CMakeLists.txt  setup.py  shapes_pybind11.cpp
src/: CMakeLists.txt  Rectangle.cpp  Rectangle.h
swig_wrap/: CMakeLists.txt  example.i  setup.py
test/: test_shapes.py
